<resources>
    <string name="app_name">FindCard</string>
    <string name="check">Check</string>
    <string name="card_number">Card Number: %1$s </string>
    <string name="card_brand">Card Brand: %1$s</string>
    <string name="card_type">Card Type: %1$s</string>
    <string name="bank">Bank: %1$s</string>
    <string name="country">Country: %1$s </string>
    <string name="scheme">Scheme: %1$s</string>
    <string name="prepaid">Prepaid: %1$s</string>
    <string name="card_length">Card Length: %1$s</string>
    <string name="format">\t %1$s</string>


    <string name="snack_message">Something went wrong</string>
    <string name="error_message">Please check the following: \n \t\t 1. You are connected to the internet. \n \t\t 2. The card number is valid.</string>
    <string name="input_error">Must enter card Number</string>
    <string name="hint">Enter first 8 digits</string>


</resources>