<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.motion.widget.MotionLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/screen_background"
    app:layoutDescription="@xml/activity_card_scene"
    tools:context=".CardActivity">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/card_number_layout"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="64dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/card_number_field"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/check_btn"
        android:layout_width="100dp"
        android:layout_height="50dp"
        android:text="@string/check"
        app:layout_constraintEnd_toEndOf="@id/card_number_layout"
        app:layout_constraintTop_toBottomOf="@id/card_number_layout" />

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:id="@+id/coord_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="24dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">


        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/fabClose"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/primaryTextColor"
            android:elevation="1dp"
            android:src="@drawable/ic_baseline_close_24"
            app:layout_anchor="@id/cardView"
            app:layout_anchorGravity="center_horizontal|top" />

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/cardView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="200dp"
            android:layout_marginBottom="-32dp"
            app:cardCornerRadius="34dp">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/screen_background">

                <TextView
                    android:id="@+id/error_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:elevation="3dp"
                    android:gravity="center"
                    android:visibility="gone"
                    android:lineSpacingExtra="3dp"
                    android:text="@string/error_message"
                    android:textAlignment="center"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/card_number"
                    style="@style/ResultDisplayStyle"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="40dp"
                    android:drawablePadding="10dp"
                    android:text="@string/card_number"
                    android:textStyle="bold"
                    android:visibility="gone"
                    app:drawableStartCompat="@drawable/ic_card_number_24"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:text="Card Number: 8593 1468" />

                <TextView
                    android:id="@+id/card_brand"
                    style="@style/ResultDisplayStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:text="@string/card_brand"
                    app:drawableStartCompat="@drawable/brand"
                    android:visibility="gone"
                    app:layout_constraintStart_toStartOf="@+id/card_number"
                    app:layout_constraintTop_toBottomOf="@+id/card_number"
                    tools:text="Card brand" />

                <TextView
                    android:id="@+id/card_type"
                    style="@style/ResultDisplayStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:text="@string/card_type"
                    android:visibility="gone"
                    app:drawableStartCompat="@drawable/ic_type_24"
                    app:layout_constraintStart_toStartOf="@+id/card_number"
                    app:layout_constraintTop_toBottomOf="@+id/card_brand"
                    tools:text="Type" />

                <TextView
                    android:id="@+id/card_bank"
                    style="@style/ResultDisplayStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:text="@string/bank"
                    android:visibility="gone"
                    app:drawableStartCompat="@drawable/ic_bank_24"
                    app:layout_constraintStart_toStartOf="@+id/card_number"
                    app:layout_constraintTop_toBottomOf="@+id/card_type"
                    tools:text="First Bank" />

                <TextView
                    android:id="@+id/card_country"
                    style="@style/ResultDisplayStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:text="@string/country"
                    android:visibility="gone"
                    app:drawableStartCompat="@drawable/ic_country_24"
                    app:layout_constraintStart_toStartOf="@+id/card_number"
                    app:layout_constraintTop_toBottomOf="@+id/card_bank"
                    tools:text="Nigeria" />

                <TextView
                    android:id="@+id/card_prepaid"
                    style="@style/ResultDisplayStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:text="@string/prepaid"
                    android:visibility="gone"
                    app:drawableStartCompat="@drawable/ic_prepaid_postpaid_24"
                    app:layout_constraintStart_toStartOf="@+id/card_number"
                    app:layout_constraintTop_toBottomOf="@+id/card_country"
                    tools:text="Prepaid" />

                <TextView
                    android:id="@+id/card_scheme"
                    style="@style/ResultDisplayStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:text="@string/scheme"
                    android:visibility="gone"
                    app:layout_constraintStart_toStartOf="@+id/card_number"
                    app:layout_constraintTop_toBottomOf="@+id/card_prepaid"
                    tools:text="Card Scheme" />

            </androidx.constraintlayout.widget.ConstraintLayout>
        </com.google.android.material.card.MaterialCardView>
    </androidx.coordinatorlayout.widget.CoordinatorLayout>

    <include
        android:id="@+id/include"
        layout="@layout/progress_view" />
</androidx.constraintlayout.motion.widget.MotionLayout>